@@ -28,6 +28,8 @@ documents those changes that are of interest to users and admins.
  -- Convert configuration parameter PrivateData from on/off flag to have
     separate flags for job, partition, and node data. See "man slurm.conf"
     for details.
+ -- Altered sacctmgr to always return a non-zero exit code on error and send 
+    error messages to stderr.
 
 * Changes in SLURM 1.3.5
 ========================
